--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,5 @@
 		<div id="crazyapp">
 			heyo index
 		</div>
-	<script type="text/javascript" src="/dist/app.bundle.js"></script></body>
+	</body>
 </html>
